fix: set scroll behavior to smooth and add scroll padding to minimize overflow

--- a/portfolio-page/styles/main.css
+++ b/portfolio-page/styles/main.css
@@ -1,5 +1,7 @@
 html{
     font-size: 10px;
+    scroll-behavior: smooth;
+    scroll-padding-top: 10rem;
 }
 
 *, ::before, ::after{
